@startuml
class TowerSelector <<TowerContainer>> {
    - towerChoices : TowerChoice[]
    # <<override>> OnChoiceClicked(choice:IChoice) : void
}
class TowerChoice {
    + prefab : GameObject
    - buttonLabel : string
    + Tower : Tower <<get>>
    + Label : string <<get>>
    + Price : int <<get>>
    + Sprite : Sprite <<get>>
}
RadialSelector <|-- TowerSelector
TowerSelector ..> TowerChoice
IChoice <|-- TowerChoice
TowerChoice --> "Tower" Tower
@enduml
